update configurations and try the unit test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+##spring.datasource.url=jdbc:mysql://localhost:3306/plant?serverTimezone=UTC
+###spring.datasource.username=admin
+###spring.datasource.password=@cn8JY4wnhr477LJ
+com.udacity.datasource.username=root
+com.udacity.datasource.password=mUAc2D#e!Hy(7wdq
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto= create
+spring.jpa.show-sql=true
 
